# template_cmake_qt_application

./: .gitignore  CMakeLists.txt  LICENSE  README.md  snapcraft.yaml  template-qt-snap_0.0.1_amd64.snap
include/package_name/: main_window.h
nodes/: my_application.cpp
